--- a/index.html
+++ b/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foods</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"> -->
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <!--Section 01-->
-        <section class="section-01">
-            <h1 class="section-heading">
-                Variety of Foods
-            </h1>
-            <div class="section-01-icons">
-                <i class="fas fa-egg change"></i>
-                <i class="fas fa-stroopwafel"></i>
-                <i class="fas fa-cheese"></i>
-                <i class="fas fa-hotdog"></i>
-                <i class="fas fa-drumstick-bite"></i>
-                <i class="fas fa-ice-cream"></i>
-                <i class="fas fa-fish"></i>
-                <i class="fas fa-cookie"></i>
-                <i class="fas fa-seedling"></i>
-            </div>
-        </section>
-        <!--End Section 01-->
+      <!--Section 01-->
+      <section class="section-01">
+        <h1 class="section-heading">Variety of Foods</h1>
+        <div class="section-01-icons">
+          <i class="fas fa-egg change"></i>
+          <i class="fas fa-stroopwafel"></i>
+          <i class="fas fa-cheese"></i>
+          <i class="fas fa-hotdog"></i>
+          <i class="fas fa-drumstick-bite"></i>
+          <i class="fas fa-ice-cream"></i>
+          <i class="fas fa-fish"></i>
+          <i class="fas fa-cookie"></i>
+          <i class="fas fa-seedling"></i>
+        </div>
+      </section>
+      <!--End Section 01-->
+
+      <!--Section 02-->
+      <section class="section-02">
+        <h1 class="section-heading">popular meals</h1>
+        <div class="cards-container">
+          <div class="card">
+            <img src="images/card-img-1.png" class="card-img" />
+            <h3 class="card-name">Fish</h3>
+            <button class="card-btn">Order Now</button>
+          </div>
+          <div class="card">
+            <img src="images/card-img-2.png" class="card-img" />
+            <h3 class="card-name">Cake</h3>
+            <button class="card-btn">Order Now</button>
+          </div>
+          <div class="card">
+            <img src="images/card-img-3.png" class="card-img" />
+            <h3 class="card-name">Lobster</h3>
+            <button class="card-btn">Order Now</button>
+          </div>
+        </div>
+      </section>
+      <!--End Section 02-->
     </div>
-        <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
