--- a/index.html
+++ b/index.html
@@ -52,6 +52,56 @@
         </div>
       </section>
       <!--End Section 02-->
+
+      <!--Section 03-->
+      <section class="section-03">
+        <h1 class="section-heading">gallery</h1>
+        <div class="gallery">
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-1.jpg" alt="Food picture" class="food-img"/>
+            <h3 class="food-name">Pancakes</h3>
+            <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
+              adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-2.jpg" alt="Food picture" class="food-img"/>
+            <h3 class="food-name">Cupcakes</h3>
+            <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
+              adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-3.jpg" alt="Food picture" class="food-img"/>
+            <h3 class="food-name">Hummus</h3>
+            <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
+              adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
+            </p>>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-4.jpg" alt="Food picture" class="food-img"/>
+            <h3 class="food-name">Hamburgers</h3>
+            <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
+              adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
+            </p>          
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-5.jpg" alt="Food picture" class="food-img"/>
+            <h3 class="food-name">Salmon</h3>
+            <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
+              adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
+            </p>
+          </a>
+          <a href="#" class="gallery-link" title="Order Now">
+            <img src="images/gallery-img-6.jpg" alt="Food picture" class="food-img"/>
+            <h3 class="food-name">vegeteables</h3>
+            <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
+              adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
+            </p>
+          </a>
+        </div>
+      </section>
+      <!--End Section 03-->
     </div>
     <script src="script.js"></script>
   </body>
