--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h3 class="food-name">Hummus</h3>
             <p class="food-description">Lorem ipsum dolor sit amet consectetur<br>
               adipisicing elit. Saepe vel exercitationem ipsa fugit minima...
-            </p>>
+            </p>
           </a>
           <a href="#" class="gallery-link" title="Order Now">
             <img src="images/gallery-img-4.jpg" alt="Food picture" class="food-img"/>
@@ -102,6 +102,24 @@
         </div>
       </section>
       <!--End Section 03-->
+      
+      <!--Section 04-->
+      <section class="section-04">
+        <div class="section-04-text">
+          <h2 class="section-04-heading">Sign Me Up</h2>
+          <p class="section-04-paragraph"> Be the first to know about new products</p>
+        </div>
+        <form class="signup-form">
+          <input type="email" class="signup-form-input" placeholder="Enter your email here" />
+          <button type="submit" class="signup-form-btn">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </form>
+        <p class="copyright">
+          CodeAndCreate&copy; All Rights Reserved
+        </p>
+      </section>
+      <!--End Section 04-->
     </div>
     <script src="script.js"></script>
   </body>
